 * Added move and copy for groups and entries
 * New navigation in a single screen / new animations between activities
 * New icons for the material pack / vectorization
 * New adaptive launcher icon
 * Added a setting to disable the open button when no password is identified
 * Added a setting to disable the education screens
 * Fix the fingerprint recognition (WARNING : The keystore is reinit, you must delete the old keys)
 * Fix small bugs

KeepassDX (2.5.0.0beta11)
 * Fix crash in beta10 version

KeepassDX (2.5.0.0beta10)
 * Dynamically change Algorithm and Key Derivation Function in settings
 * Upgrade translations
 * New red volcano theme, fix classic dark theme
 * Add Material Icon Pack to the Free version
 * Update fingerprint state with checkbox
 * Fix bugs

KeepassDX (2.5.0.0beta9)
 * Education Screens to learn how to use the app
 * New designs
 * New custom font for character visibility
 * New themes
 * New icon pack
 * Change setting organisation
 * Pro version

KeepassDX (2.5.0.0beta8)
 * Hide custom entries protected
 * Best management of field references (https://keepass.info/help/base/fieldrefs.html)
 * Change database / default settings
 * Add Autofill for search
 * Add sorting by last access and by creation time
 * Rebuild custom entries
 * Refactor old code
 * Fix bugs

KeepassDX (2.5.0.0beta7)
 * Rebuild Notifications
 * Change links to https
 * Add extended Ascii (ñæËÌÂÝÜ...)
 * Upgrade custom visibility font
 * Best fingerprint error management
 * Add setting to prevent the password copy
 * Fix bugs

KeepassDX (2.5.0.0beta6)
 * Fix crash

KeepassDX (2.5.0.0beta5)
 * Autofill (Android O)
 * Deletion for group
 * New sorts with (Asc/Dsc, Groups before or after)
 * Better permission management with dialog at runtime
 * Setting to change font of field (monospace for a better visibility)
 * Open kdbx and kdb files from file browser
 * Change sort of fields
 * Hide empty fields
 * Add copy button for Username / Password and extra field