@@ -98,7 +98,7 @@ public class ClipboardHelper {
     public void copyToClipboard(String label, String value) throws SamsungClipboardException {
         try {
             clipboardManager.setPrimaryClip(ClipData.newPlainText(label, value));
-        } catch (NullPointerException e) {
+        } catch (Exception e) {
             throw new SamsungClipboardException(e);
         }
     }
