@@ -118,7 +118,7 @@
     <bool name="sort_recycle_bin_bottom_default" translatable="false">true</bool>
     <bool name="monospace_font_fields_enable_default" translatable="false">true</bool>
     <bool name="auto_open_file_uri_default" translatable="false">true</bool>
-    <bool name="allow_copy_password_default" translatable="false">true</bool>
+    <bool name="allow_copy_password_default" translatable="false">false</bool>
     <bool name="enable_education_screens_default" translatable="false">true</bool>
     <bool name="education_create_db_default" translatable="false">false</bool>
     <bool name="education_select_db_default" translatable="false">false</bool>
