@@ -215,7 +215,8 @@
     <string name="list_password_generator_options_summary">Set the default password generator characters</string>
     <string name="notifications">Notifications</string>
     <string name="clipboard_notifications_title">Clipboard Notifications</string>
-    <string name="clipboard_notifications_summary">Enable clipboard notifications to copy username and password</string>
+    <string name="clipboard_notifications_summary">Enable clipboard notifications to copy entry fields</string>
+    <string name="clipboard_warning">Some devices are not able to automatically delete clips from the clipboard. If your manager does not allow this deletion, you will have to manually delete the copied item from your clipboard history.</string>
     <string name="lock">Lock</string>
     <string name="lock_database_screen_off_title">Screen lock</string>
     <string name="lock_database_screen_off_summary">Lock the database when the screen is off</string>
@@ -253,7 +254,8 @@
     <string name="auto_open_file_uri_title">Auto open selected file</string>
     <string name="auto_open_file_uri_summary">Automatically open a file from the selection screen after a selection in the file browser</string>
     <string name="allow_copy_password_title">Copy of password</string>
-    <string name="allow_copy_password_summary">Allow the copy of the password to the clipboard.</string>
+    <string name="allow_copy_password_summary">Allow the copy of the password and protected fields to the clipboard.</string>
+    <string name="allow_copy_password_warning">WARNING : The clipboard is shared by all applications. If sensitive data is copied, other software may recover it.</string>
     <string name="warning_disabling_storage_access_framework">WARNING : disabling this feature may result in an inability to open or save the databases</string>
     <string name="open_link_database">Link of the Kdbx file to open</string>
     <string name="database_name_title">Database name</string>
