@@ -45,6 +45,11 @@
             android:title="@string/clipboard_notifications_title"
             android:defaultValue="@bool/clipboard_notifications_default"
             android:summary="@string/clipboard_notifications_summary" />
+        <SwitchPreference
+            android:key="@string/allow_copy_password_key"
+            android:title="@string/allow_copy_password_title"
+            android:summary="@string/allow_copy_password_summary"
+            android:defaultValue="@bool/allow_copy_password_default"/>
     </PreferenceCategory>
 
 </PreferenceScreen>
