@@ -3,6 +3,5 @@
  * Nouvelle navigation dans un seul écran / nouvelles animations entre activités
  * Nouveaux icones pour le pack material
  * Nouvel icone de lancement adaptatif
- * Ajout d'un paramètre pour désactiver le bouton d'ouverture quand aucun mot de passe n'est identifié
- * Ajout d'un paramètre pour désactiver les écrans d'éducation
+ * Ajout d'un paramètre pour désactiver le bouton d'ouverture quand aucun mot de passe n'est identifié / les écrans d'éducation / la copie des champs customisés protégés
  * Correction de la reconnaissance des empreintes digitales (ATTENTION: le keystore est réinitialisé, vous devez supprimer les anciennes clés)
